Refine api structure
